<resources>
    <string name="app_name">Individual1M6</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add">Agregar</string>
    <string name="delete">Borrar</string>
    <string name="ShowAll">Mostrar todos</string>
    <string name="Apodo">Ingrese su Nickname</string>
    <string name="Nombre">Ingrese su nombre completo</string>
    <string name="Edad">Ingrese su edad</string>
    <string name="Usuarios">Usuarios registrados</string>


    <string name="lorem_ipsum">Registrese</string>
</resources>